--- a/src/css/style.css
+++ b/src/css/style.css
@@ -156,7 +156,7 @@ h1 {
   text-shadow: 0 2px 0 var(--background-color-dark);
 }
 
-h1 > a {
+h1>a {
   text-decoration: none;
   color: black;
 }
@@ -259,7 +259,7 @@ a {
   width: 100%;
 }
 
-.main-example_activity > .picture_container {
+.main-example_activity>.picture_container {
   max-height: 550px;
   padding: 0;
   margin: 0;
@@ -271,7 +271,7 @@ a {
   box-shadow: var(--cast-shadow) var(--orange-dark);
 }
 
-.main-example_activity > .picture_container > img {
+.main-example_activity>.picture_container>img {
   max-width: 100%;
   height: auto;
   margin: 0;
@@ -284,12 +284,12 @@ a {
   padding: 0;
 }
 
-.myActivityList > a {
+.myActivityList>a {
   text-decoration: none;
   color: black;
 }
 
-.activity-list_item > a {
+.activity-list_item>a {
   text-decoration: none;
   color: black;
 }
@@ -342,7 +342,7 @@ a {
   align-items: center;
 }
 
-.loader-animation > i {
+.loader-animation>i {
   animation: rotate 1s linear infinite;
   font-size: 3em;
 }
@@ -421,6 +421,44 @@ p {
   height: 2em;
   width: 2em;
   cursor: pointer;
+}
+
+.calendarModal::backdrop {
+  background-color: rgba(0, 0, 0, 0.623);
+}
+
+.calendarModal {
+  width: 40%;
+  border: var(--border);
+  border-color: var(--background-color-dark);
+  background-color: var(--background-color-light);
+  border-radius: var(--border-radius);
+}
+
+.calendarForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.calendarForm>.flexed {
+  display: flex;
+  flex-direction: column;
+}
+
+.details-options {
+  display: flex;
+  gap: 2em;
+}
+
+.details-options:first-child>span:first-child:after {
+  content: "|";
+}
+
+.details-options:last-child {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @keyframes rotate {
@@ -530,7 +568,7 @@ p {
     height: auto;
   }
 
-  .main-example_activity > .picture_container {
+  .main-example_activity>.picture_container {
     border: none;
     box-shadow: none;
     border-radius: 0;
@@ -543,7 +581,7 @@ p {
     display: none;
   }
 
-  .main-example_activity > .picture_container > img {
+  .main-example_activity>.picture_container>img {
     border: var(--border) var(--orange-dark);
     border-radius: var(--border-radius);
     box-shadow: var(--cast-shadow) var(--orange-dark);
@@ -560,4 +598,20 @@ p {
   .alert-container {
     max-width: 100%;
   }
+
+  .calendarModal {
+    width: 90%;
+  }
+
+  .details-options {
+    flex-direction: column;
+    gap: 1em;
+  }
+
+  .details-options>span {
+    width: 100%;
+    display: block;
+
+  }
+
 }
